--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
@@ -39,6 +40,7 @@
   },
   "devDependencies": {
     "axios": "^0.21.1",
+    "gh-pages": "^3.1.0",
     "styled-components": "^5.2.3",
     "styled-reset": "^4.3.4"
   }
