add: deployment links

--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
+  "homepage": "https://sounmind.github.io/react-netflix-clone/",
   "eslintConfig": {
     "extends": [
       "react-app",
